@@ -5,6 +5,10 @@ Revision history for Perl extension At.pm
 0.08 2024-01-23T01:48:21Z
 
     - Resume expired sessions with $at->server_refreshSession( ... )
+    - Update according to lexicon changes in bluesky-social/atproto@dac5c9e
+       - tagged suggestions
+    - Update according to lexicon changes in bluesky-social/atproto@fb979b1
+       - social graph relationships endpoint
 
 0.07 2024-01-20T22:54:55Z
 
